# vitaki-vitarps5

./: .clang-format  .cppcheck-suppressions  .editorconfig  .env.prod  .env.testing  .gitignore  .gitleaks.toml  .gitmodules  CMakeLists.txt  DONE.md  Dockerfile  PROGRESS.md  README.md  STATUS.md  TODO.md  client_side_optimizations.txt  psp2core-1770759860-0x0007ad30a1-eboot.bin.psp2dmp  psp2core-1770842652-0x000b1a2d9b-eboot.bin.psp2dmp
.github/workflows/: create_release.yml  lint-format.yml
assets/: psn-ca-bundle.pem
docs/: BUILDING.md  CONFIGURATION.md  CRASH_ANALYSIS.md  DEPRECATED.md  DONE.md  EXPERIMENTAL_VITA_FRAGMENTATION.md  INCOMPLETE_FEATURES.md  LATENCY_QUICK_WINS.md  PROGRESS.md  TODO.md  WIFI_OPTIMIZATION.md
docs/ai/: BACKEND_AUDIT.md  CLIENT_SIDE_OPT_PLAN.md  CODEBASE_CLEANUP_PLAN.md  DEPRECATED.md  DONE.md  FPS_HEALTH_INVESTIGATION.md  FRAME_RATE_DOWNSHIFT_RESEARCH.md  LOGGING.md  LOGGING_DEFAULTS_FIX.md  MOTION_MACROBLOCKING_INVESTIGATION.md  NETWORK_SOCKET_BUFFER_OPTIMIZATION.md  PHASE_4_FOCUS_MANAGER_LEGACY_CLEANUP.md  PHASE_6_CONSOLE_CARDS_COMPLETION.md  PROGRESS.md  PSN_OAUTH_CREDENTIALS.md  PSN_REMOTEPLAY_WEBSOCKET_403_STATUS.md  PS_BUTTON_DUAL_MODE_FEASIBILITY.md  REMOTE_PLAY_SMOOTHNESS_PLAN.md  ROADMAP.md  SCOPING_CONTROLLER_LAYOUT_REDO.md  SCOPING_FOCUS_MANAGER_REFACTOR.md  SCOPING_NAV_COLLAPSIBLE_BAR.md  SCOPING_UI_POLISH.md  STABILITY_AB_TESTING_GUIDE.md  STREAM_PIPELINE_ROBUSTNESS_PLAN.md  TODO.md  UI_CODE_BEST_PRACTICES.md  UI_GRAPHICS_MODULE_EXTRACTION.md  UI_MAINTENANCE_GUIDE.md  UI_POLISH_BATCHES_3_4_COMPLETION.md  UI_POLISH_COMPLETION_SUMMARY.md  UI_POLISH_KNOWN_ISSUES.md  UI_POLISH_POST_MERGE_STATUS.md  UI_REFACTOR_ANALYSIS.md  UI_REFACTOR_SCOPE.md  UI_UX_ASSESSMENT.md
docs/plans/: 2026-03-05-readme-revamp-design.md  2026-03-05-readme-revamp.md
docs/superpowers/plans/: 2026-04-12-internet-remote-play-security.md  2026-06-25-motion-macroblocking-fix.md
lib/: CMakeLists.txt
lib/include/chiaki/: common.h  congestioncontrol.h  feedbacksender.h  frameprocessor.h  regist.h  reorderqueue.h  session.h  streamconnection.h  takion.h  videoreceiver.h
lib/include/chiaki/remote/: holepunch.h
lib/src/: common.c  congestioncontrol.c  ctrl.c  discovery.c  feedbacksender.c  frameprocessor.c  packetstats.c  regist.c  reorderqueue.c  senkusha.c  session.c  streamconnection.c  takion.c  takionsendbuffer.c  videoreceiver.c  videoreceiver_gap.c  videoreceiver_gap.h
lib/src/remote/: holepunch-test.c  holepunch.c  stun.h
scripts/vita/parse_core/: util.py
test/: CMakeLists.txt  config_vita_tests.c  json_escape_tests.c  packet_path_tests.c  token_crypto_tests.c
test/stubs/: context.h
tools/: build.sh  parse_dump.sh
tools/analysis/: compare_vitaki_delta.sh
vita/: CMakeLists.txt
vita/include/: config.h  config_hosts.h  config_internal.h  context.h  controller.h  discovery.h  host.h  host_callbacks.h  host_constants.h  host_disconnect.h  host_feedback.h  host_input.h  host_lifecycle.h  host_loss_profile.h  host_metrics.h  host_quit.h  host_recovery.h  logging.h  message_log.h  psn_auth.h  psn_remote.h  stream_state.h  token_crypto.h  ui.h  util.h  version.h  video.h  video_overlay.h  vita_dns.h  vita_resolve.h
vita/include/ui/: ui_animation.h  ui_components.h  ui_console_cards.h  ui_constants.h  ui_controller_diagram.h  ui_focus.h  ui_graphics.h  ui_input.h  ui_internal.h  ui_navigation.h  ui_qr.h  ui_screens.h  ui_state.h  ui_text.h  ui_types.h
vita/src/: audio.c  config.c  config_hosts.c  config_internal.h  config_migration.c  config_values.c  context.c  controller.c  controller_metadata.c  discovery.c  discovery_host.c  host.c  host_callbacks.c  host_disconnect.c  host_feedback.c  host_input.c  host_lifecycle.c  host_loss_profile.c  host_metrics.c  host_quit.c  host_recovery.c  host_registration.c  host_storage.c  logging.c  main.c  message_log.c  psn_auth.c  psn_remote.c  token_crypto.c  ui.c  util.c  video.c  video_overlay.c  vita_dns.c
vita/src/kernel/: psbridge.c  psbridge_exports.yml
vita/src/ui/: ui_animation.c  ui_components.c  ui_console_cards.c  ui_controller_diagram.c  ui_focus.c  ui_graphics.c  ui_input.c  ui_navigation.c  ui_qr.c  ui_screens.c  ui_state.c  ui_text.c
